<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/cineplanet_logo" />

        <TextView
            android:id="@+id/txv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            tools:text="Usuario"
            android:textSize="@dimen/dimen_16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/svg_home"
                app:tint="#757275" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/menu_home"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_candyStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/svg_store"
                app:tint="#757275" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/menu_candyShop"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/svg_login"
                app:tint="#757275" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/menu_login"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/svg_logout"
                app:tint="#757275" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/menu_logout"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_16sp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>