<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginAct">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/imgArrow"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/svg_arrow_back"
                    android:tint="@color/color_primary"
                     />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_title_login"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/dimen_26sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">
            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/cineplanet_logo"
                android:padding="20dp"
                android:contentDescription="@string/app_name"
                android:layout_height="150dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:autofillHints="emailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_enter_your_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:autofillHints="password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/dimen_18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_access"
                app:cornerRadius="10dp"
                android:layout_width="match_parent"
                android:backgroundTint="@color/color_primary"
                android:layout_height="55dp"
                android:text="@string/text_button_enter"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />



            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:gravity="center"
                    android:text="O"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_continueGuest"
                    app:icon="@drawable/svg_incognito"
                    app:iconGravity="start"
                    app:iconSize="25dp"
                    app:iconTint="@null"
                    app:cornerRadius="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#c2c2c2"
                    android:text="Continuar como invitado" />


            </LinearLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>